; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/cmdutils/reg/extr_import.c_delete_key_state.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/cmdutils/reg/extr_import.c_delete_key_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parser = type { i32 }

@LINE_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.parser*, i8*)* @delete_key_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @delete_key_state(%struct.parser* %0, i8* %1) #0 {
  %3 = alloca %struct.parser*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store %struct.parser* %0, %struct.parser** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  store i8* %8, i8** %5, align 8
  %9 = load %struct.parser*, %struct.parser** %3, align 8
  %10 = call i32 @close_key(%struct.parser* %9)
  %11 = load i8*, i8** %5, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp eq i32 %13, 72
  br i1 %14, label %20, label %15

15:                                               ; preds = %2
  %16 = load i8*, i8** %5, align 8
  %17 = load i8, i8* %16, align 1
  %18 = sext i8 %17 to i32
  %19 = icmp eq i32 %18, 104
  br i1 %19, label %20, label %38

20:                                               ; preds = %15, %2
  %21 = load i8*, i8** %5, align 8
  %22 = call i64 @parse_key_name(i8* %21, i8** %7)
  store i64 %22, i64* %6, align 8
  %23 = load i64, i64* %6, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %37

25:                                               ; preds = %20
  %26 = load i8*, i8** %7, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %37

28:                                               ; preds = %25
  %29 = load i8*, i8** %7, align 8
  %30 = load i8, i8* %29, align 1
  %31 = sext i8 %30 to i32
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %28
  %34 = load i64, i64* %6, align 8
  %35 = load i8*, i8** %7, align 8
  %36 = call i32 @RegDeleteTreeW(i64 %34, i8* %35)
  br label %37

37:                                               ; preds = %33, %28, %25, %20
  br label %38

38:                                               ; preds = %37, %15
  %39 = load %struct.parser*, %struct.parser** %3, align 8
  %40 = load i32, i32* @LINE_START, align 4
  %41 = call i32 @set_state(%struct.parser* %39, i32 %40)
  %42 = load i8*, i8** %5, align 8
  ret i8* %42
}

declare dso_local i32 @close_key(%struct.parser*) #1

declare dso_local i64 @parse_key_name(i8*, i8**) #1

declare dso_local i32 @RegDeleteTreeW(i64, i8*) #1

declare dso_local i32 @set_state(%struct.parser*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
